# Vision-Agents

./: .gitignore  CLAUDE.md  join_interview.html  pyproject.toml  railway.toml
agents-core/vision_agents/core/agents/: agents.py
examples/09_interview_pressure_analyzer/: Dockerfile  README.md  demo_local.py  interview_analyzer.py  preview_dashboard.py
plugins/behavioral_analyzer/: README.md  pyproject.toml
plugins/behavioral_analyzer/tests/: test_behavioral_analyzer.py
plugins/behavioral_analyzer/vision_agents/plugins/behavioral_analyzer/: __init__.py  _aggregator.py  _aggression_classifier.py  _baseline.py  _degradation.py  _explainability.py  _prompt.py  _question_analyzer.py  _resilience.py  _scorer.py  _session_comparison.py  _session_summary.py  _spike_detector.py  _telemetry.py  _types.py  analyzer.py  events.py  interview_bridge.py  pose_bridge.py
plugins/openrouter/vision_agents/plugins/openrouter/: openrouter_llm.py
sessions/: hackathon-interview-004_20260301_063954.json  hackathon-interview-005_20260301_064831.json  interviews.db
